# managed-agents

./: .gitignore  LICENSE  README.md  project-story.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: agents-expert.md  behavior-auditor.md  docs-auditor.md  environments-expert.md  events-expert.md  files-expert.md  lead-0.md  mcp-vaults-expert.md  memory-expert.md  multiagent-expert.md  research-expert.md  sessions-expert.md  skills-expert.md  tools-expert.md
.github/workflows/: lint.yml
agents/insignia_ingestion/: CHANGELOG.md  INGESTION_V3_1_SECOND_TRIAL_2026-05-03.md  (+7 more)
evals/: MANIFEST_SCHEMA.md  README.md  requirements.txt  runner.py  score.py
lint/: README.md  audit_coverage.py  baseline.md  from_audit.py  prompt_lint.py  schema.md
poller/: README.md  pyproject.toml  ruff.toml
poller/poller/: __init__.py  __main__.py  config.py  exceptions.py  orchestrator.py  retry.py  scheduler.py  schemas.py
poller/poller/adapters/: anthropic_sessions.py  graph.py  memory.py
poller/poller/components/: attachment_stager.py  email_gate.py  ingestion_step.py  mail_feed.py  manifest_step.py  reply_parser.py  resolver_step.py  teams_poster.py
poller/tests/: conftest.py  test_config.py  test_exceptions.py  test_orchestrator.py  test_retry.py  test_scheduler.py  test_schemas.py
poller/tests/adapters/: test_anthropic_sessions.py  test_graph.py  test_memory.py
poller/tests/components/: test_attachment_stager.py  test_email_gate.py  test_ingestion_step.py  test_mail_feed.py  test_manifest_step.py  test_reply_parser.py  test_resolver_step.py  test_teams_poster.py
(+95 files in other folders)
